--- a/components/micro_reactor/CMakeLists.txt
+++ b/components/micro_reactor/CMakeLists.txt
@@ -9,6 +9,12 @@ idf_component_register(
         "src/extensions/ur_wormhole.c"
         "src/extensions/ur_supervisor.c"
         "src/extensions/ur_panic.c"
+        "src/extensions/ur_bus.c"
+        "src/extensions/ur_param.c"
+        "src/extensions/ur_codec.c"
+        "src/extensions/ur_power.c"
+        "src/extensions/ur_trace.c"
+        "src/extensions/ur_acl.c"
     INCLUDE_DIRS
         "include"
     REQUIRES
@@ -17,6 +23,8 @@ idf_component_register(
         esp_timer
     PRIV_REQUIRES
         esp_ringbuf
+        nvs_flash
+        esp_sleep
 )
 
 # Optional: Enable extra warnings for development
